changes to master 12 line

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 		<h1>Hello World!</h1>
 			<p>This is the first file in my GIT REPO</p>
 			<p>Sveiks from jauns</p>
+			<p>Sveiks from MASTER</p>
 	</body>
 </html>
